Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.4.2
-
None
-
-
2f7b1eccc (102-based)
Description
D:\buildtrees\qtwebengine\src\here-src-6-53d854ae4f.clean\src\3rdparty\chromium\ui/base/resource/resource_handle.h(56): error C2039: 'vector': is not a member of 'std'
There is an #ifdef'ed use of std::vector in that header (debug builds?). Simply including the vector at the top with the same #ifdef solves the issue.
Attachments
For Gerrit Dashboard: QTBUG-109949 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
453150,2 | [Backport] IWYU: Add missing standard header includes to ui/base/resource | 102-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |