[Backport] IWYU: Add missing standard header includes to ui/base/resource

Bug: none
Change-Id: I07f7b5f2bd323bc0c4e68d0ca848c91623ae7239
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4053544
Cr-Commit-Position: refs/heads/main@{#1076388}
Fixes: QTBUG-109949
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/453150
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>