chromium/ui/base/resource/resource_bundle.cc
@@ -7,6 +7,8 @@
 #include <stdint.h>
 
 #include <limits>
+#include <string>
+#include <tuple>
 #include <utility>
 #include <vector>
 
